[package]
name = "rustyworld"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["minifb", "rodio"]

[dependencies]
minifb = { version = "0.19.3", optional = true }
byteorder = "1.4.3"
itertools = "0.10.0"
arr_macro = "0.1.3"
lazy_static = "1.4.0"
rodio = { version = "0.14.0", default-features = false, optional = true }
num = "0.4.0"
